# Testtask_fastapi

salary_check/: Dockerfile  docker-compose.yml  pyproject.toml
salary_check/docker/: app.sh
salary_check/salary_check/backend/: main.py
salary_check/salary_check/backend/alembic/versions/: 1045c92beede_revision11.py  1d72827dd91b_revision4.py  27c2c8310911_revision2.py  2aa1c85434b4_revision17.py  2b4054b6fea1_revision3.py  3b8be48286e9_revision10.py  40c8bc480ea9_revision20.py  47e951d42f9e_revision26.py  599291575e1c_revision16.py  5f3429da2178_revision0.py  63c429b078b0_revision6.py  66267d015fd7_revision23.py  6c85f155e308_revision9.py  85ee76fc18e0_revision22.py  8a7e8b5f9e78_revision0.py  9bc18106c9ca_revision25.py  a20c95c0b089_revision15.py  b2241da10232_revision1.py  b421060d7e2b_revision12.py  b5e9055b6621_revision13.py  b7301909107c_revision18.py  c71dbfab2697_revision21.py  cd99ec5eb81c_revision19.py  d85cdbe45fd3_revision5.py  d8ad1d0c73e9_revision24.py  e6f5febea452_revision14.py
salary_check/salary_check/backend/app/api/: api.py
salary_check/salary_check/backend/app/auth/: cookie.py  manager.py
salary_check/salary_check/backend/app/core/: confiig.py
salary_check/salary_check/backend/app/crud/: salary.py  user.py
salary_check/salary_check/backend/app/db/: base.py  db_setup.py  init_db.py  session.py
salary_check/salary_check/backend/app/models/: mixin.py  salary_data.py  user.py
salary_check/salary_check/backend/app/schemas/: salary_data.py  user.py
