[tool.poetry]
name = "salary-check"
version = "0.1.0"
description = ""
authors = ["Artemio007 <mvamvh@gmail.com>"]
readme = "README.md"
packages = [{include = "salary_check"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^11.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
